# feruca-py

./: .gitignore  Cargo.toml  README.md  feruca.pyi  pyproject.toml  test.py
.github/workflows/: ci.yml
src/: lib.rs
